--- a/style/style.scss
+++ b/style/style.scss
@@ -19,6 +19,7 @@ body {
     font-family: Be Vietnam Pro, sans-serif;
     font-size: 16px;
     position: relative;
+    background-color: #fff;
 }
 
 img {
